--- a/_charts/loki/0.80.3/values.yaml
+++ b/_charts/loki/0.80.3/values.yaml
@@ -230,7 +230,7 @@ loki:
   schemaConfig:
     configs:
     - from: "2020-09-07"
-      store: boltdb-shipper
+      store: tsdb
       object_store: s3
       schema: v11
       index:
@@ -239,10 +239,6 @@ loki:
 
   # -- Check https://grafana.com/docs/loki/latest/configuration/#storage_config for more info on how to configure storages
   storageConfig:
-    boltdb_shipper:
-      active_index_directory: /var/loki/index
-      cache_location: /var/loki/cache
-      shared_store: s3
     s3:
       endpoint: minio-s3.idc.roywong.work
       bucketnames: loki
