临时禁用ruler组件

--- a/_charts/loki/0.80.3/values.yaml
+++ b/_charts/loki/0.80.3/values.yaml
@@ -1516,7 +1516,7 @@ compactor:
 # Configuration for the ruler
 ruler:
   # -- Specifies whether the ruler should be enabled
-  enabled: true
+  enabled: false
   # -- Kind of deployment [StatefulSet/Deployment]
   kind: Deployment
   # -- Number of replicas for the ruler
