--- a/_charts/loki/0.80.3/values.yaml
+++ b/_charts/loki/0.80.3/values.yaml
@@ -245,6 +245,7 @@ loki:
       access_key_id: 0ysv9fyuySvGScdwUoqP
       secret_access_key: MgRf4sJcqDp4qftjfZ2BT3MCmyn6bvpywSVDvEvT
       insecure: false
+      region: China-GuangDong-ShenZhen-LongGang-IDC
       s3forcepathstyle: true
 # -- Uncomment to configure each storage individually
 #   azure: {}
