启用agentListenerEnabled: true，创建出来的agent需要与controller的50000端口通信。

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -326,7 +326,7 @@ controller:
     maxUnavailable: "0"
 
   # -- Create Agent listener service
-  agentListenerEnabled: false
+  agentListenerEnabled: true
   # -- Listening port for agents
   agentListenerPort: 50000
   # -- Host port to listen for agents
