注入环境变量

--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -18,6 +18,11 @@ spec:
       containers:
         - name: distributor
           image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
+          env:
+            - name: POD_NAME
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.name
           volumeMounts:
             - name: config
               mountPath: /etc/docker-credentials.yaml
