--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -1,3 +1,43 @@
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: secret-distributor-sa
+  namespace: kube-system
+
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: secret-distributor-leader
+  namespace: kube-system
+rules:
+  - apiGroups: ["coordination.k8s.io"]
+    resources: ["leases"]
+    verbs: ["get","list","watch","create","update","patch"]
+  - apiGroups: [""]
+    resources: ["namespaces","secrets"]
+    verbs: ["get","list","watch","create","update","patch"]
+
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: secret-distributor-binding
+  namespace: kube-system
+subjects:
+  - kind: ServiceAccount
+    name: secret-distributor-sa
+    namespace: kube-system
+roleRef:
+  kind: Role
+  name: secret-distributor-leader
+  apiGroup: rbac.authorization.k8s.io
+
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,6 +55,7 @@ spec:
       labels:
         app: docker-credentials-distributor
     spec:
+      serviceAccountName: secret-distributor-sa
       containers:
         - name: distributor
           image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
