--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -8,33 +8,37 @@ metadata:
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: Role
+kind: ClusterRole
 metadata:
-  name: secret-distributor-leader
-  namespace: kube-system
+  name: secret-distributor-role
 rules:
+  # Leader Election 用的 Lease
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get","list","watch","create","update","patch"]
+  # 列 Namespace
   - apiGroups: [""]
-    resources: ["namespaces","secrets"]
+    resources: ["namespaces"]
+    verbs: ["get","list","watch"]
+  # CRUD Secret
+  - apiGroups: [""]
+    resources: ["secrets"]
     verbs: ["get","list","watch","create","update","patch"]
 
 
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: secret-distributor-binding
-  namespace: kube-system
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: secret-distributor-role
 subjects:
   - kind: ServiceAccount
     name: secret-distributor-sa
     namespace: kube-system
-roleRef:
-  kind: Role
-  name: secret-distributor-leader
-  apiGroup: rbac.authorization.k8s.io
 
 
 ---
