配置环境变量NAME/NAMESPACE

--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -64,10 +64,16 @@ spec:
         - name: distributor
           image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
           env:
-            - name: POD_NAME
+            # 环境变量NAME对应docker-credentials-distributor程序中的锁ID。
+            # 环境变量NAMESPACE对应docker-credentials-distributor程序中的NAMESPACE，定义这个锁在哪个NAMESPACE中。
+            - name: NAME
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+            - name: NAMESPACE
+              valueFrom:
+                fieldRef:
+                  fieldPath: metadata.namespace
           volumeMounts:
             - name: config
               mountPath: /etc/docker-credentials.yaml
