--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -64,16 +64,16 @@ spec:
         - name: distributor
           image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
           env:
-            # 环境变量NAME对应docker-credentials-distributor程序中的锁ID。
-            # 环境变量NAMESPACE对应docker-credentials-distributor程序中的NAMESPACE，定义这个锁在哪个NAMESPACE中。
-            - name: NAME
+            - name: POD_NAME  # 环境变量POD_NAME对应docker-credentials-distributor程序中的资源ID。
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
-            - name: NAMESPACE
+            - name: NAMESPACE # 环境变量NAMESPACE对应docker-credentials-distributor程序中的NAMESPACE，定义这个锁在哪个NAMESPACE中。
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
+            - name: LOCK_NAME # 环境变量LOCK_NAME定义锁名称，默认值为"secret-distributor-lock"，多个POD去抢锁。
+              value: "secret-distributor-lock"
           volumeMounts:
             - name: config
               mountPath: /etc/docker-credentials.yaml
