指定拉取镜像密钥

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1214,7 +1214,7 @@ additionalAgents:
       limits:
         cpu: '1'
         memory: '2Gi'
-    imagePullSecretName: docker-credential-harbor-idc-roywong-work
+    imagePullSecretName: registry-idc-library
 #  maven:
 #    podName: maven
 #    customJenkinsLabels: maven
