指定拉取镜像密钥

--- a/devops-tools/docker-credentials-distributor.yaml
+++ b/devops-tools/docker-credentials-distributor.yaml
@@ -60,6 +60,8 @@ spec:
         app: docker-credentials-distributor
     spec:
       serviceAccountName: secret-distributor-sa
+      imagePullSecrets:
+        - name: registry-idc-library
       containers:
         - name: distributor
           image: harbor.idc.roywong.work/library/docker-credentials-distributor:latest
