--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1215,6 +1215,7 @@ additionalAgents:
         cpu: '1'
         memory: '2Gi'
     imagePullSecretName: registry-idc-library
+    alwaysPullImage: true
   maven:
     podName: maven-3.9.9-jdk8
     customJenkinsLabels: 3.9.9-jdk8
@@ -1229,6 +1230,7 @@ additionalAgents:
         cpu: '4'
         memory: '8Gi'
     imagePullSecretName: registry-idc-library
+    alwaysPullImage: true
 #  maven:
 #    podName: maven
 #    customJenkinsLabels: maven
