--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1203,7 +1203,7 @@ agent:
 additionalAgents:
   go:
     podName: go-1.24.2
-    customJenkinsLabels: go-1.24.2
+    customJenkinsLabels: go
     image:
       repository: harbor.idc.roywong.work/library/jenkins/inbound-agent-go
       tag: 1.24.2
@@ -1217,11 +1217,11 @@ additionalAgents:
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
   maven:
-    podName: maven-3.9.9-jdk8
-    customJenkinsLabels: maven-3.9.9-jdk8
+    podName: maven-3.9.9
+    customJenkinsLabels: maven
     image:
       repository: harbor.idc.roywong.work/library/jenkins/inbound-agent-maven
-      tag: 3.9.9-jdk8
+      tag: 3.9.9
     resources:
       requests:
         cpu: '500m'
