--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1231,6 +1231,11 @@ additionalAgents:
         memory: '8Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
+    envVars:
+      - name: HTTP_PROXY
+        value: http://10.255.2.162:8001
+      - name: HTTPS_PROXY
+        value: http://10.255.2.162:8001
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
