--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1237,10 +1237,10 @@ additionalAgents:
       - name: HTTPS_PROXY
         value: http://10.255.2.162:8001
     workspaceVolume:
-      - type: EphemeralVolume
-        accessModes: ReadWriteOnce
-        requestsSize: 10Gi
-        storageClassName: infra
+      type: EphemeralVolume
+      accessModes: ReadWriteOnce
+      requestsSize: 10Gi
+      storageClassName: infra
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
