--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1237,10 +1237,8 @@ additionalAgents:
       - name: HTTPS_PROXY
         value: http://10.255.2.162:8001
     workspaceVolume:
-      type: DynamicPVC
-      accessModes: ReadWriteOnce
-      requestsSize: 10Gi
-      storageClassName: infra
+      type: PVC
+      claimName: maven-jdk8-workspace
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
