调整pvc访问模式

--- a/jenkins/pvc/maven-jdk8-workspace.yaml
+++ b/jenkins/pvc/maven-jdk8-workspace.yaml
@@ -8,7 +8,7 @@ metadata:
     app: data-maven-jdk8-workspace
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Gi
