调整maven-jdk8 workspace持久化

--- a/jenkins/pvc/maven-jdk8-workspace.yaml
+++ b/jenkins/pvc/maven-jdk8-workspace.yaml
@@ -8,7 +8,7 @@ metadata:
     app: data-maven-jdk8-workspace
 spec:
   accessModes:
-    - ReadWriteOnce
+    - ReadWriteMany
   resources:
     requests:
       storage: 100Gi
