--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1238,7 +1238,7 @@ additionalAgents:
         value: http://10.255.2.162:8001
     workspaceVolume:
       type: PVC
-      claimName: maven-jdk8-workspace
+      claimName: data-maven-jdk8-workspace
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
