--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1236,6 +1236,11 @@ additionalAgents:
         value: http://10.255.2.162:8001
       - name: HTTPS_PROXY
         value: http://10.255.2.162:8001
+    volumes:
+      - type: ConfigMap
+        configMapName: maven-settings
+        mountPath: /home/jenkins/.m2/settings.xml
+        subPath: settings.xml
     workspaceVolume:
       type: PVC
       claimName: data-maven-jdk8-workspace
