--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1237,6 +1237,8 @@ additionalAgents:
       - name: HTTPS_PROXY
         value: http://10.255.2.162:8001
     volumes:
+      - type: EmptyDir
+        mountPath: /home/jenkins/.m2
       - type: ConfigMap
         configMapName: maven-settings
         mountPath: /home/jenkins/.m2/settings.xml
