--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1238,7 +1238,7 @@ additionalAgents:
         value: http://10.255.2.162:8001
     volumes:
       - type: EmptyDir
-        mountPath: /home/jenkins/.m2
+        mountPath: /home/jenkins/.m2/repository
       - type: ConfigMap
         configMapName: maven-settings
         mountPath: /home/jenkins/.m2/settings.xml
