--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1245,7 +1245,7 @@ additionalAgents:
         subPath: settings.xml
     workspaceVolume:
       type: PVC
-      claimName: data-maven-jdk8-workspace
+      claimName: data-jenkins-workspace
   maven-jdk11:
     podName: maven-jdk11
     customJenkinsLabels: maven-jdk11
@@ -1261,6 +1261,21 @@ additionalAgents:
         memory: '8Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
+    envVars:
+      - name: HTTP_PROXY
+        value: http://10.255.2.162:8001
+      - name: HTTPS_PROXY
+        value: http://10.255.2.162:8001
+    volumes:
+      - type: EmptyDir
+        mountPath: /home/jenkins/.m2
+      - type: ConfigMap
+        configMapName: maven-settings
+        mountPath: /home/jenkins/.m2/settings.xml
+        subPath: settings.xml
+    workspaceVolume:
+      type: PVC
+      claimName: data-maven-jdk11-workspace
   maven-jdk17:
     podName: maven-jdk17
     customJenkinsLabels: maven-jdk17
@@ -1276,6 +1291,21 @@ additionalAgents:
         memory: '8Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
+    envVars:
+      - name: HTTP_PROXY
+        value: http://10.255.2.162:8001
+      - name: HTTPS_PROXY
+        value: http://10.255.2.162:8001
+    volumes:
+      - type: EmptyDir
+        mountPath: /home/jenkins/.m2
+      - type: ConfigMap
+        configMapName: maven-settings
+        mountPath: /home/jenkins/.m2/settings.xml
+        subPath: settings.xml
+    workspaceVolume:
+      type: PVC
+      claimName: data-maven-jdk17-workspace
   maven-jdk21:
     podName: maven-jdk21
     customJenkinsLabels: maven-jdk21
