--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1351,47 +1351,43 @@ additionalAgents:
         memory: '2Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
-    additionalContainers:
-      - sideContainerName: dind
-        image:
-          repository: docker.io/library/docker
-          tag: 28.1.1-dind
-        command: dockerd-entrypoint.sh
-        args: ""
-        privileged: true
-        resources:
-          requests:
-            cpu: 500m
-            memory: 1Gi
-          limits:
-            cpu: 1
-            memory: 2Gi
-        volumeMounts:
-          - name: docker-graph-storage
-            mountPath: /var/lib/docker
-      - sideContainerName: cli
-        image:
-          repository: docker.io/library/docker
-          tag: 28.1.1-cli
-        command: ["sleep"]
-        args: ["infinity"]
-        privileged: true
-        resources:
-          requests:
-            cpu: 500m
-            memory: 1Gi
-          limits:
-            cpu: 1
-            memory: 2Gi
-        env:
-          - name: DOCKER_HOST
-            value: tcp://localhost:2375
-        volumeMounts:
-          - name: docker-graph-storage
-            mountPath: /var/lib/docker
-    volumes:
-      - name: docker-graph-storage
-        emptyDir: {}
+#    additionalContainers:
+#      - sideContainerName: dind
+#        image:
+#          repository: docker.io/library/docker
+#          tag: 28.1.1-dind
+#        privileged: true
+#        resources:
+#          requests:
+#            cpu: 500m
+#            memory: 1Gi
+#          limits:
+#            cpu: 1
+#            memory: 2Gi
+#        volumeMounts:
+#          - name: docker-graph-storage
+#            mountPath: /var/lib/docker
+#      - sideContainerName: cli
+#        image:
+#          repository: docker.io/library/docker
+#          tag: 28.1.1-cli
+#        privileged: true
+#        resources:
+#          requests:
+#            cpu: 500m
+#            memory: 1Gi
+#          limits:
+#            cpu: 1
+#            memory: 2Gi
+#        env:
+#          - name: DOCKER_HOST
+#            value: tcp://localhost:2375
+#        volumeMounts:
+#          - name: docker-graph-storage
+#            mountPath: /var/lib/docker
+#    volumes:
+#      - name: docker-graph-storage
+#        emptyDir: {}
 #  maven:
 #    podName: maven
 #    customJenkinsLabels: maven
