--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1351,19 +1351,19 @@ additionalAgents:
         memory: '2Gi'
     imagePullSecretName: registry-idc-library
     alwaysPullImage: true
-#    additionalContainers:
-#      - sideContainerName: dind
-#        image:
-#          repository: docker.io/library/docker
-#          tag: 28.1.1-dind
-#        privileged: true
-#        resources:
-#          requests:
-#            cpu: 500m
-#            memory: 1Gi
-#          limits:
-#            cpu: 1
-#            memory: 2Gi
+    additionalContainers:
+      - sideContainerName: dind
+        image:
+          repository: docker.io/library/docker
+          tag: 28.1.1-dind
+        privileged: true
+        resources:
+          requests:
+            cpu: 500m
+            memory: 1Gi
+          limits:
+            cpu: 1
+            memory: 2Gi
 #        volumeMounts:
 #          - name: docker-graph-storage
 #            mountPath: /var/lib/docker
