配置docker agent，配置volumes[]。

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -1353,7 +1353,8 @@ additionalAgents:
     alwaysPullImage: true
     volumes:
       - type: EmptyDir
-        name: docker-graph-storage
+        mountPath: docker-graph-storage
+        memory: false
     additionalContainers:
       - sideContainerName: dind
         image:
