添加插件：parameterized-trigger:859.vb_e3907a_07a_16

--- a/_charts/jenkins/5.8.33/values.yaml
+++ b/_charts/jenkins/5.8.33/values.yaml
@@ -408,6 +408,7 @@ controller:
     - workflow-aggregator:608.v67378e9d3db_1
     - git:5.7.0
     - configuration-as-code:1953.v148f87d74b_1e
+    - parameterized-trigger:859.vb_e3907a_07a_16
 
   # If set to false, Jenkins will download the minimum required version of all dependencies.
   # -- Download the minimum required version or latest version of all dependencies
